<resources>
    <string name="app_name">RZHUANG\'s POS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_new_order">New Order</string>
    <string name="btn_new_item">New Item</string>
    <string name="btn_total">Total</string>

    <string name="item">Item: </string>
    <string name="quantity">Quantity: </string>
    <string name="unit_price">Unit Price:</string>

</resources>
